--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
 }
 
 div {
-    top: 100px;
     border: 1px solid black;
     width: 80%;
     padding: 30px;
@@ -18,6 +17,10 @@ button {
 }
 li {
     margin: 10px;
+}
+
+input {
+    width:100%;
 }
 
 
